--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap');
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -18,63 +20,82 @@ time, mark, audio, video {
 	font: inherit;
 	vertical-align: baseline;
 }
-body{
-    padding:5px;
+#background{
+    background: linear-gradient(#E0D98C, #F7A76C, #EC7272);
+    height: 99vh;
+    width: 99vw;
+    border-radius: 20px;
+    position: fixed;
+    z-index: -1;
 }
+body{
+    padding: 5px;
+    font-family: 'Caveat', cursive;
+    background-color: #C3FF99;
+}
+
 #container{
     display: grid;
-    border: 1px solid black;
     border-radius: 20px;
-    height: 99vh;
 }
 header{
     display: grid;
-    grid-template-columns: 1fr 5fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 #searchBar{
-    display:grid
+    display: grid;
 }
 #search{
+    border: 0px solid white;
     justify-self: center;
-    box-sizing:border-box;
+    box-sizing: border-box;
     width: 500px;
     height: 30px;
     border-radius: 10px;
-    border: 1px solid black;
     padding: 4px;
+    position: relative;
+    top: 10px;
 }
+#calender
+,#time{
+    font-size: 40px;
+    text-align: center;
+}
+
 #profileContainer{
     justify-self: right;
     display: grid;
-    border: 1px solid black;
     grid-template-columns: 1fr 1fr;
-    height: 70px;
+    height: 100%;
+    background-color:rgba(255,255,255,.5);
+    border-radius: 20px;
 }
 #pic{
     width: 70px;
 }
 #userContainer{
-    border: 1px solid black;
     align-items: center;
 }
 #user{
     text-align: center;
-    border:1px solid black;
+    position: relative;
+    top: 22px; 
 }
 #mainContent{
-    border:1px solid blue;
     display: grid;
     justify-self: center;
     justify-items: center;
-    gap: 50px;
+    gap: 10px;
     grid-template-columns: repeat(3,1fr);
+    grid-auto-rows: auto;
     padding: 10px;
 }
 #info,
 .groups{
-    width: 350px;
-    height: 350px; 
-    border: 1px solid red;
+    width: 100%;
+    height: 100%; 
+    background-color: rgba(255,255,255,.3);
+    border-radius: 20px;
     align-self: center;
 }
 .groups{
@@ -85,25 +106,50 @@ header{
 .groupName{
     font-size: 40px;
     text-align: center;
-    border: 1px solid black
+    background-color:rgba(255,255,255,.2);
+    border-radius: 50px 50px 0px 0px;
 }
 .appContainer{
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-auto-rows: auto;
-    gap: 3px;
+    justify-content: space-between;
+    gap: 5px;
     padding: 3px;
-    border: 1px solid black;
 }
 .apps{
+    cursor: pointer;
+}
+.icon{
     width: 80px;
     height: 80px;
     border-radius: 20px;
-    border: 1px solid black;
-    background-color: yellow;
-    cursor: pointer;
-
 }
 .apps:hover{
     transform: scale(1.03,1.03);
+}
+
+@media screen and (max-width:810px){
+    #mainContent{
+        grid-template-columns: repeat(2,1fr);
+        grid-auto-rows: auto;
+
+    }
+    #search{
+        width: 120%;
+    }
+}
+@media screen and (max-width:580px){
+    #mainContent{
+        grid-template-columns: 1fr;
+        grid-auto-rows: auto;
+        width: 80%;
+    }
+    .icon{
+        width: 100%;
+        height:100%;
+    }
+    #search{
+        width: 200px;
+    }
 }
